# adapter-onebot

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/actions/build-api-doc/: action.yml
.github/actions/setup-python/: action.yml
.github/workflows/: codecov.yml  release.yml  ruff.yml  website-deploy.yml  website-preview-ci.yml
nonebot/adapters/onebot/: __init__.py  collator.py  exception.py  store.py  utils.py
nonebot/adapters/onebot/v11/: __init__.py  adapter.py  bot.py  bot.pyi  config.py  event.py  exception.py  helpers.py  message.py  permission.py  utils.py
nonebot/adapters/onebot/v12/: __init__.py  adapter.py  bot.py  bot.pyi  config.py  event.py  exception.py  log.py  message.py  permission.py  utils.py
scripts/: build_api_docs.py
tests/: conftest.py  events.json  test_call_api.py  test_collator.py  test_connection.py  test_event.py  test_store.py
tests/v11/: events.json  test_event.py  test_v11_config.py  test_v11_connection.py  test_v11_event.py  test_v11_message.py
tests/v12/: events.json  test_v12_api.py  test_v12_config.py  test_v12_connection.py  test_v12_event.py  test_v12_message.py
website/: docusaurus.config.js  tailwind.config.js
website/docs/: README.md  configuration.md  installation.md  setup.md
website/docs/guide/: configuration.md  installation.md  setup.md
website/src/pages/: index.tsx
