[tool.poetry]
name = "nonebot-adapter-onebot"
version = "2.4.3"
description = "OneBot(CQHTTP) adapter for nonebot2"
authors = ["yanyongyu <yyy@nonebot.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://onebot.adapters.nonebot.dev/"
repository = "https://github.com/nonebot/adapter-onebot"
documentation = "https://onebot.adapters.nonebot.dev/"
keywords = ["bot", "qq", "qqbot", "coolq", "onebot", "cqhttp"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Robot Framework",
  "Framework :: Robot Framework :: Library",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
packages = [{ include = "nonebot" }]

[tool.poetry.dependencies]
python = "^3.8"
msgpack = "^1.0.3"
nonebot2 = "^2.2.0"
typing-extensions = ">=4.0.0,<5.0.0"
pydantic = ">=1.10.0,<3.0.0,!=2.5.0,!=2.5.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"
isort = "^5.10.1"
black = "^24.0.0"
nonebug = "^0.3.0"
nonemoji = "^0.1.2"
pytest-cov = "^4.0.0"
pre-commit = "^3.2.0"
nb-autodoc = "^1.0.0a5"
pytest-asyncio = "^0.23.0"
nonebot2 = { git = "https://github.com/nonebot/nonebot2.git", branch = "master", extras = [
  "fastapi",
] }

[tool.pytest.ini_options]
addopts = "--cov=nonebot/adapters/onebot --cov-report term-missing"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["E402", "C901", "UP037", "PYI021"]

[tool.ruff.lint.per-file-ignores]
"nonebot/adapters/onebot/__init__.py" = ["F401"]
"nonebot/adapters/onebot/v11/__init__.py" = ["F403"]
"nonebot/adapters/onebot/v12/__init__.py" = ["F403"]
"packages/nonebot-adapter-cqhttp/nonebot/adapters/cqhttp/__init__.py" = ["F403"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.pyright]
pythonVersion = "3.8"
pythonPlatform = "All"
defineConstant = { PYDANTIC_V2 = true }

typeCheckingMode = "basic"
reportShadowedImports = false
disableBytesTypePromotions = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
